kubernetes/dfe-net/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dfe-net
  namespace: legacy-modernization
  labels:
    app: dfe-net
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: dfe-net
